<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    tools:ignore="contentDescription"
    android:background="@color/gray_bg">

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.Material3.Button"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:fontFamily="@font/nunito_sans"
        android:textSize="17sp"
        android:textColor="@color/sign_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/forgot_pass"
        android:textColor="@color/orange"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/si_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/si_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.4"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/si_password_field"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/si_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.4"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/si_email_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/si_email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/si_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/si_materialCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/si_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/card_view_bg"
        app:cardElevation="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">

        <ImageView
            android:id="@+id/si_cooking"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cooking_icon" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>