<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".activities.OrderActivity">

    <TextView
        android:id="@+id/order_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/italianno"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Adress"
        android:textColor="@color/tab_text_color"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/order_header"
        app:layout_constraintStart_toEndOf="@+id/order_header"
        app:layout_constraintTop_toTopOf="@+id/order_header" />

    <ImageButton
        android:id="@+id/order_navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@color/empty"
        app:layout_constraintBottom_toBottomOf="@+id/order_adress"
        app:layout_constraintStart_toEndOf="@+id/order_adress"
        app:layout_constraintTop_toTopOf="@+id/order_adress"
        app:srcCompat="@drawable/ic_navigation" />

    <ImageView
        android:id="@+id/no_orders_cart"
        android:layout_width="120dp"
        android:layout_height="113dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.3"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_adress"
        app:srcCompat="@drawable/ic_shopping_cart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/order_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/order_cart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/order_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/order_user"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/order_home"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_selected_shopping_cart" />

        <ImageButton
            android:id="@+id/order_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/order_history"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/order_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />

        <ImageButton
            android:id="@+id/order_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/order_user"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/no_orders_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/no_orders_yet"
        android:fontFamily="@font/nunito_sans"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_orders_cart" />

    <Button
        android:id="@+id/makeOrderBtn"
        android:visibility="gone"
        style="@style/Widget.Material3.Button"
        android:layout_width="315dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/order_now"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:visibility="gone"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="45dp"
        android:alpha="0.5"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/makeOrderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView6">

        <TextView
            android:id="@+id/order_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/order_price"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_sans"
            android:text="N2000"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_adress" />
</androidx.constraintlayout.widget.ConstraintLayout>