<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".activities.MainActivity">


    <EditText
        android:id="@+id/adress_field"
        android:layout_width="230dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/adress"
        android:singleLine="true"
        android:textColor="@color/tab_text_color"
        android:textColorHint="@color/tab_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/gradient"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_cart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_selected_home" />

        <ImageButton
            android:id="@+id/main_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            android:alpha="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_user"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/main_home"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shopping_cart" />

        <ImageButton
            android:id="@+id/main_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_history"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/main_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />

        <ImageButton
            android:id="@+id/main_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/main_user"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" >

    </androidx.viewpager2.widget.ViewPager2>

    <ImageButton
        android:id="@+id/main_navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:background="@color/empty"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_navigation" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:background="@color/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_field"
        app:tabTextColor="@color/tab_text_color"
        app:tabIndicatorColor="@color/orange"
        app:tabSelectedTextColor="@color/orange"
        app:tabTextAppearance="@style/nunitofontstyle">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Foods" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drinks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Snacks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sauce" />
    </com.google.android.material.tabs.TabLayout>

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_view_bg"
        android:hint="@string/search"
        android:textColor="@color/black"
        android:textAppearance="@style/search_bar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_in_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@color/empty"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:srcCompat="@drawable/ic_search" />

    <ImageButton
        android:id="@+id/close_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@color/empty"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toStartOf="@+id/search_in_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/results_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/italianno"
        android:text="@string/results"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" >

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>